# sound-machine

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  format.json  parsejson.py  pyproject.toml  release.py  setup.py  sound.py
.github/workflows/: ci.yml  make-sphinx-docs.yml
docs/: Makefile
docs/source/: api.rst  conf.py  guide.rst  index.rst
examples/: glitch_song.py  parsejson.py
sound/: __init__.py  async.py  asyncplayer.py  envelope.py  filter.py  instrument.py  note.py  notes.py  sample.py  signal.py  sound.py  tone.py
