[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-machine"
dynamic = ["version"]
authors = [
    { name = "Audrey Dutcher", email = "audrey@rhelmot.io" },
]
description = "Sound and music synthesis library in pure python"
requires-python = ">=3.6"
keywords = ["sound", "synthesis", "pure"]

dependencies = [
    "sounddevice",
    "numpy",
    "progressbar",
]

[project.urls]
repository = "https://github.com/rhelmot/sound-machine"
documentation = "https://sound-machine.readthedocs.io/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[tool.setuptools]
zip-safe = false
package-data = { sound = ["py.typed"] }

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "sound.__version__"}

